[package]
name = "data_market-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "Ovidiu Damian - Itheum","Bucur David - Itheum"]

[dev-dependencies]

[dependencies.data_market]
path = ".."

[dependencies.multiversx-sc]
version = "0.39.7"

[dependencies.multiversx-sc-meta]
version = "0.39.7"
