[package]
name = "data_market-meta"
version = "1.0.0"
edition = "2021"
publish = false
authors = [
    "Ovidiu Damian - Itheum",
    "Bucur David - Itheum",
    "Mark Paul - Itheum",
]

[dev-dependencies]

[dependencies.data_market]
path = ".."

[dependencies.multiversx-sc]
version = "0.48.0"

[dependencies.multiversx-sc-meta]
version = "0.48.0"
default-features = false
